ui: fix hide liquidate btn on mobile screens

--- a/app/lending/lending.module.scss
+++ b/app/lending/lending.module.scss
@@ -175,8 +175,11 @@
   @media (min-width: 768px) {
     padding: 12px 24px;
     font-size: 16px;
-    display: none
   }
+
+    @media (max-width: 640px) {
+      display: none
+    }
 }
 
 .sortIcon {
